[FIX] fix header dropdown menu size and position on IE v11

--- a/app/assets/stylesheets/sections/header.scss
+++ b/app/assets/stylesheets/sections/header.scss
@@ -292,7 +292,7 @@ body.nav-sm-display {
       .list-inline {
         .list-inline-item {
           margin: 0;
-          position:  initial;
+          position:  static;
           padding: .7rem;
           padding-left: 1rem;
           padding-right: 1rem;
